[package]
name = "proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
rustls = {version = "0.19.1", features = ["dangerous_configuration"]}
tungstenite = "0.13.0"
webpki = "0.21"
